Planification d’une Tâche en Arrière-Plan avec WorkManager

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FinalExamApp</string>
+    <string name="welcome_message">Bienvenue sur FinalExamApp!</string>
 </resources>
